--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
 
     <div class="container">
         <div class="row">
-            <div class="content col-xs-12 col-md-6 col-md-offset-3">
+            <div class="content col-xs-12 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3">
                 {{ content }}
             </div>
         </div>
