--- a/_sass/_site.scss
+++ b/_sass/_site.scss
@@ -1,3 +1,22 @@
+$breakpoints: (
+        'sm': $screen-sm-min,
+        'md': $screen-md-min,
+        'lg': $screen-lg-min
+);
+
+@mixin breakpoint($breakpoint) {
+    @if map-has-key($breakpoints, $breakpoint) {
+        @media (min-width: map-get($breakpoints, $breakpoint)) {
+            @content;
+        }
+    }
+
+    @else {
+        @error 'No value found for `#{$breakpoint}`. '
+         + 'Please make sure it is defined in `$breakpoints` map.';
+    }
+}
+
 .navbar-brand img {
     width: 27px;
     height: 27px;
@@ -5,7 +24,8 @@
 }
 
 .content * {
-    margin: 0;
+    margin-top: 0;
+	margin-bottom: 0;
 }
 .content * + * {
     margin-top: $line-height-base + 0em;
@@ -15,4 +35,49 @@
     margin-top: 0.75em;
     color: $gray-light;
     font-size: 0.75em;
+}
+
+.post__content img {
+    @extend .img-responsive;
+    border:1px solid #eee;
+}
+
+.post__image--scaled {
+    @include breakpoint(md) {
+        @include transform(scale(1.2));
+        @include transform-origin(center top);
+        box-sizing: border-box;
+    }
+}
+
+.post__content h3 {
+	text-align: center;
+}
+.post__content .wrapped {
+	margin: 20px 0;
+	display: -webkit-box;
+	display: -moz-box;
+	display: -ms-box;
+	display: box;
+	-webkit-box-align: center;
+	-moz-box-align: center;
+	-ms-box-align: center;
+	box-align: center;
+
+	&::before,
+	&::after {
+		content: "";
+		display: block;
+		-webkit-box-flex: 1;
+		-moz-box-flex: 1;
+		-ms-box-flex: 1;
+		box-flex: 1;
+		height: 0;
+		padding-top: 1px;
+		border-bottom: 1px dashed #999;
+	}
+	
+	span {
+		margin: 0 20px;
+	}
 }
